--- a/wk2dy4hw-checkpoint.ipynb
+++ b/wk2dy4hw-checkpoint.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ae52e048",
+   "id": "a4d3f13f",
    "metadata": {},
    "outputs": [
     {
@@ -122,8 +122,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "fc8ac8f3",
+   "execution_count": 6,
+   "id": "11c6c1eb",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#instance of the S_CartComputer class\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m acmeCart \u001b[38;5;241m=\u001b[39m \u001b[43mS_CartComputer\u001b[49m()\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m#Create Function to run the S_CartComputer(acmeCart) methods\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msCartRun\u001b[39m():\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;66;03m#instace of class\u001b[39;00m\n",
+      "Input \u001b[1;32mIn [6]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#instance of the S_CartComputer class\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m acmeCart \u001b[38;5;241m=\u001b[39m \u001b[43mS_CartComputer\u001b[49m()\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m#Create Function to run the S_CartComputer(acmeCart) methods\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msCartRun\u001b[39m():\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;66;03m#instace of class\u001b[39;00m\n",
       "\u001b[1;31mNameError\u001b[0m: name 'S_CartComputer' is not defined"
      ]
     }
@@ -152,16 +152,16 @@
     "        if salutation.lower() ==\"quit\":\n",
     "            print(\"Thanks for shopping with us, hope to see you back soon!\")\n",
     "            break\n",
-    "        elif response.lower() == 'add':\n",
+    "        elif salutation.lower() == 'add':\n",
     "            acmeCart.addToCart()\n",
     "        \n",
-    "        elif responce.lower() == 'show':\n",
+    "        elif salutation.lower() == 'show':\n",
     "            acmeCart.countItems()\n",
     "            \n",
-    "        elif responce.lower() == 'savings':\n",
+    "        elif salutation.lower() == 'savings':\n",
     "            acmeCart.savings()\n",
     "            \n",
-    "        elif responce.lower() == \"checkout\":\n",
+    "        elif salutation.lower() == \"checkout\":\n",
     "            acmeCart.checkOut()\n",
     "            \n",
     "sCartRun()\n",
@@ -173,8 +173,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "6295e062",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
-   "id": "d493c3e7",
+   "id": "c646a160",
    "metadata": {
     "scrolled": true
    },
@@ -198,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "263e4b4b",
+   "id": "81e9e64a",
    "metadata": {},
    "outputs": [],
    "source": [
